{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 326,
  "lineage": "d66ff28b-1011-9657-9ef0-7feebb5258b4",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334109771446:vpc/vpc-0e952edfcda047960",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-09742b04be47ef624",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0099b1b0ca8d7e846",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e952edfcda047960",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0410cf22979b5e407",
            "owner_id": "334109771446"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "static_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b48d9bc8fef91487",
            "association_id": "eipassoc-05bad667f09c2c961",
            "domain": "vpc",
            "id": "eipalloc-0b48d9bc8fef91487",
            "instance": "i-03ddb3a3a36e2cfe5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01d6dac4ba1039e0c",
            "private_dns": "ip-172-31-34-136.ec2.internal",
            "private_ip": "172.31.34.136",
            "public_dns": "ec2-52-204-243-102.compute-1.amazonaws.com",
            "public_ip": "52.204.243.102",
            "public_ipv4_pool": "amazon",
            "tags": {
              "App": "Web",
              "Name": "ass1-prod-eip",
              "Owner": "Gaurav",
              "Project": "CLO835",
              "env": "prod"
            },
            "tags_all": {
              "App": "Web",
              "Name": "ass1-prod-eip",
              "Owner": "Gaurav",
              "Project": "CLO835",
              "env": "prod"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.my_amazon",
            "aws_key_pair.my_key",
            "aws_security_group.my_sg",
            "data.aws_ami.latest_amazon_linux",
            "data.aws_iam_instance_profile.lab_instance_profile",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_amazon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c951bbe993ea087",
            "arn": "arn:aws:ec2:us-east-1:334109771446:instance/i-03ddb3a3a36e2cfe5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-03ddb3a3a36e2cfe5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ass1-prod",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01d6dac4ba1039e0c",
            "private_dns": "ip-172-31-34-136.ec2.internal",
            "private_ip": "172.31.34.136",
            "public_dns": "ec2-54-196-179-136.compute-1.amazonaws.com",
            "public_ip": "54.196.179.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d7282f0c15c04a53",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-033948a43941a391f",
            "tags": {
              "App": "Web",
              "Name": "ass1-prod-Amazon-Linux",
              "Owner": "Gaurav",
              "Project": "CLO835",
              "env": "prod"
            },
            "tags_all": {
              "App": "Web",
              "Name": "ass1-prod-Amazon-Linux",
              "Owner": "Gaurav",
              "Project": "CLO835",
              "env": "prod"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06e99e3fae3eb9ff0"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_key",
            "aws_security_group.my_sg",
            "data.aws_ami.latest_amazon_linux",
            "data.aws_iam_instance_profile.lab_instance_profile",
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:334109771446:loadbalancer/app/app-alb/692f7ad0e8b810f5",
            "arn_suffix": "app/app-alb/692f7ad0e8b810f5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-alb-1078119125.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:334109771446:loadbalancer/app/app-alb/692f7ad0e8b810f5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-alb",
            "security_groups": [
              "sg-09baf7b45f88a48c2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-033948a43941a391f"
              },
              {
                "subnet_id": "subnet-05fc37e0d7498b81d"
              },
              {
                "subnet_id": "subnet-06259bcd0e525ade7"
              },
              {
                "subnet_id": "subnet-069e72016830ed3f0"
              },
              {
                "subnet_id": "subnet-06f96950475d8d72e"
              },
              {
                "subnet_id": "subnet-0ff334ee74fe6d884"
              }
            ],
            "subnets": [
              "subnet-033948a43941a391f",
              "subnet-05fc37e0d7498b81d",
              "subnet-06259bcd0e525ade7",
              "subnet-069e72016830ed3f0",
              "subnet-06f96950475d8d72e",
              "subnet-0ff334ee74fe6d884"
            ],
            "vpc_id": "vpc-0e952edfcda047960",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_subnet_ids.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:334109771446:listener/app/app-alb/692f7ad0e8b810f5/805529da70f8b213",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:334109771446:targetgroup/app-lb-target-group/cf5ed60225a3ba21",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:334109771446:listener/app/app-alb/692f7ad0e8b810f5/805529da70f8b213",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:334109771446:loadbalancer/app/app-alb/692f7ad0e8b810f5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app-lb",
            "aws_lb_target_group.app-lb-tg",
            "aws_security_group.alb_sg",
            "data.aws_subnet_ids.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:334109771446:targetgroup/app-lb-target-group/cf5ed60225a3ba21",
            "arn_suffix": "targetgroup/app-lb-target-group/cf5ed60225a3ba21",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:334109771446:targetgroup/app-lb-target-group/cf5ed60225a3ba21",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "app-lb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e952edfcda047960"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:334109771446:targetgroup/app-lb-target-group/cf5ed60225a3ba21-20240205015518371200000002",
            "port": 8081,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:334109771446:targetgroup/app-lb-target-group/cf5ed60225a3ba21",
            "target_id": "i-03ddb3a3a36e2cfe5"
          },
          "dependencies": [
            "aws_instance.my_amazon",
            "aws_key_pair.my_key",
            "aws_lb_target_group.app-lb-tg",
            "aws_security_group.my_sg",
            "data.aws_ami.latest_amazon_linux",
            "data.aws_iam_instance_profile.lab_instance_profile",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:334109771446:targetgroup/app-lb-target-group/cf5ed60225a3ba21-20240205015518441900000003",
            "port": 8082,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:334109771446:targetgroup/app-lb-target-group/cf5ed60225a3ba21",
            "target_id": "i-03ddb3a3a36e2cfe5"
          },
          "dependencies": [
            "aws_instance.my_amazon",
            "aws_key_pair.my_key",
            "aws_lb_target_group.app-lb-tg",
            "aws_security_group.my_sg",
            "data.aws_ami.latest_amazon_linux",
            "data.aws_iam_instance_profile.lab_instance_profile",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:334109771446:targetgroup/app-lb-target-group/cf5ed60225a3ba21-20240205015518314600000001",
            "port": 8083,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:334109771446:targetgroup/app-lb-target-group/cf5ed60225a3ba21",
            "target_id": "i-03ddb3a3a36e2cfe5"
          },
          "dependencies": [
            "aws_instance.my_amazon",
            "aws_key_pair.my_key",
            "aws_lb_target_group.app-lb-tg",
            "aws_security_group.my_sg",
            "data.aws_ami.latest_amazon_linux",
            "data.aws_iam_instance_profile.lab_instance_profile",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334109771446:security-group/sg-09baf7b45f88a48c2",
            "description": "Allow app-lb inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09baf7b45f88a48c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_lb_traffic",
            "name_prefix": "",
            "owner_id": "334109771446",
            "revoke_rules_on_delete": false,
            "tags": {
              "App": "Web",
              "Name": "ass1-prod-alb-sg",
              "Owner": "Gaurav",
              "Project": "CLO835",
              "env": "prod"
            },
            "tags_all": {
              "App": "Web",
              "Name": "ass1-prod-alb-sg",
              "Owner": "Gaurav",
              "Project": "CLO835",
              "env": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e952edfcda047960"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334109771446:security-group/sg-06e99e3fae3eb9ff0",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e99e3fae3eb9ff0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from everywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from everywhere",
                "from_port": 8081,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from everywhere",
                "from_port": 8082,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8082
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from everywhere",
                "from_port": 8083,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8083
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "334109771446",
            "revoke_rules_on_delete": false,
            "tags": {
              "App": "Web",
              "Name": "ass1-prod-sg",
              "Owner": "Gaurav",
              "Project": "CLO835",
              "env": "prod"
            },
            "tags_all": {
              "App": "Web",
              "Name": "ass1-prod-sg",
              "Owner": "Gaurav",
              "Project": "CLO835",
              "env": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e952edfcda047960"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}